Fix scrollbar

--- a/StatusNet Desktop/Resources/display.css
+++ b/StatusNet Desktop/Resources/display.css
@@ -16,7 +16,7 @@ body {
 }
 
 ::-webkit-scrollbar-thumb:vertical {
-    -webkit-border-image: url(/img/scroll2.png) 10 0 10 0;
+    -webkit-border-image: url(/images/scroll2.png) 10 0 10 0;
     border-color: transparent;
     border-width: 13px 0;
     min-height: 20px;
